<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/mobile_phones" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="0dp"
        android:text="@string/locate_file" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:textSize="20sp"
        android:text="@string/message" />

    <EditText
        android:id="@+id/editText1"
        android:width="340dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>


   <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText1">

	    <Button
	        android:id="@+id/buttonSend"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent"
	        android:text="@string/send" 
         	android:layout_weight="1.0" />
	    
	    <Button
	        android:id="@+id/buttonCancel"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent"
	        android:layout_weight="1.0"
	        android:text="@string/cancel" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewStatusDeliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/status" />
    
    <TextView
        android:id="@+id/textViewStatusWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="395dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/status" />
    
</RelativeLayout>
